implemented neural network with random weights

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script src="Food.js"></script>
 <script src="CanvasCtx.js"></script>
 
-<!-- <script src="NN.js"></script> -->
+<script src="NN.js"></script>
 
 <!-- <script src="script.js"></script> -->
 <script src="main.js"></script>
