food won't appear in any initial direction of snake

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class='col-6' style="" id="score"> 0</div>
+            <div class='col-6'  id="score"> 0</div>
             <div>
                 <table class="table">
                     <tbody id="pastScores">
