--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SNAKE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script> -->
+    <!--Local files-->
+    <!-- <script src="bootstrap-toggle.min.js"></script>
+    <link rel="stylesheet" href="bootstrap-toggle.min.css">
+    </link>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    </link>
+    <script src="bootstrap.min.js"></script> -->
 
+
+    <!--CDN-->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <style>
         /* html,
         body {
@@ -24,22 +39,78 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class='col-6'  id="score"> 0</div>
+            <!-- <div class="btn-group" data-toggle="buttons"> -->
+            <input class="btn btn-success active" type="checkbox" drawBtn" onclick="shouldDrawBtn()" checked
+                data-toggle="toggle" >
+               Show Snake
+            </input>
+        </div>
+        <div class=" row">
+            <input type="checkbox" checked data-toggle="toggle"> First
+
+            <!-- <label class="checkbox-inline">
+                <input type="checkbox" data-toggle="toggle"> Second
+            </label>
+            <label class="checkbox-inline">
+                <input type="checkbox" data-toggle="toggle"> Third
+            </label> -->
+        </div>
+        <!-- </div> -->
+        <div class="row">
+
             <div>
                 <table class="table">
+                    <th>Generation</th>
+                    <th>Best Fitness</th>
+                    <th>Average Fitness</th>
+                    <th>Best Score</th>
+                    <th>Average Score</th>
+                    <th># Snakes Survive</th>
+                    <th># Tensors</th>
                     <tbody id="pastScores">
-                        <th>Generation</th>
+                        <!-- <th>Generation</th>
                         <th>Best Fitness</th>
                         <th>Average Fitness</th>
                         <th>Best Score</th>
                         <th>Average Score</th>
                         <th># Snakes Survive</th>
+                        <th># Tensors</th> -->
+
 
                     </tbody>
+                    <th>Generation</th>
+                    <th>Best Fitness</th>
+                    <th>Average Fitness</th>
+                    <th>Best Score</th>
+                    <th>Average Score</th>
+                    <th># Snakes Survive</th>
+                    <th># Tensors</th>
+                    <!-- <tfoot>Generation</tfoot>
+                    <tfoot>Best Fitness</tfoot>
+                    <tfoot>Average Fitness</tfoot>
+                    <tfoot>Best Score</tfoot>
+                    <tfoot>Average Score</tfoot>
+                    <tfoot># Snakes Survive</tfoot>
+                    <tfoot># Tensors</tfoot> -->
                 </table>
             </div>
-            <div class="col-6" id="ROOTDIV"></div>
         </div>
+        <hr />
+        <div class='col-12' id="score"> 0</div>
+        <hr />
+        <div class='col-12' id="currFitness"></div>
+        <hr />
+        <div class='col-12' id="time"></div>
+        <hr />
+        <div class='col-12' id="bestFitness"></div>
+        <hr />
+        <div class='col-6' id="generation"></div>
+        <div class='col-6' id="snakeNum"></div>
+
+        <hr />
+
+        <div class="col-12" id="ROOTDIV"></div>
+    </div>
 
 </body>
 <script src="tf.min.js"></script>
