--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
-        <a class="navbar-brand" href="#">Train</a>
+        <a class="navbar-brand" href="">Train</a>
+        <a class="navbar-brand" href="play.html">Play</a>
 
     </nav>
     <div class="container">
@@ -56,6 +57,7 @@
                 </div>
 
                 <div class="row">
+
                     <div class="btn btn-danger" id="StopBtn">Click to Stop</div>
                 </div>
                 <div class="dropdown-divider"></div>
@@ -63,10 +65,10 @@
                 <!-- <div class="row">
                     <input class="form-check" type="checkbox"></input>
                 </div> -->
-               
+
                 <div class="row">
-                    <label for="numGen">Number of Snakes per Generation (50-1000):</label>
-                    <input class="form-control" type="number" id="numGen" min="50" max="1000" value=200>
+                    <label for="numGen">Number of Snakes per Generation (10-1000):</label>
+                    <input class="form-control disabled" type="number" id="numGen" min="10" max="1000" value=200>
                 </div>
                 <div class="dropdown-divider"></div>
 
@@ -111,9 +113,9 @@
             </label> -->
                 </div>
                 <!-- </div> -->
-                <div class="row"> 
-                        <canvas id="myChart" width="400" height="400"></canvas>
-                    </div>
+                <div class="row">
+                    <canvas id="myChart" width="400" height="400"></canvas>
+                </div>
                 <div class="row">
 
                     <div>
@@ -180,5 +182,12 @@
 <script src="helper.js"></script>
 
 
+<script>
+    genSize = document.getElementById('numGen').value
+
+    gi = new GameInstance('gameCanvas', genSize)
+
+
+</script>
 
 </html>
