--- a/index.html
+++ b/index.html
@@ -34,22 +34,19 @@
     </nav>
     <div class="container">
         <div class="row">
-
-            <!-- <div class="col-12"> -->
             <div class="col-6" id="ROOTDIV">
+                <div class="col-12" id="score" bis_skin_checked="1" style="">score: 0</div>
+                <hr>
+                <div class="col-12" id="currFitness" bis_skin_checked="1">fitness: 0</div>
+                <hr>
+                <div class="col-12" id="time" bis_skin_checked="1">time: 0.000 sec</div>
+                <hr>
+                <div class="col-12" id="bestFitness" bis_skin_checked="1">best fitness: 0</div>
+                <hr>
+                <div class="col-6" id="generation" bis_skin_checked="1">generation: 1</div>
+                <div class="col-6" id="snakeNum" bis_skin_checked="1">snake #0</div>
 
-                <div class='col-12' id="score"> 0</div>
-                <hr />
-                <div class='col-12' id="currFitness"></div>
-                <hr />
-                <div class='col-12' id="time"></div>
-                <hr />
-                <div class='col-12' id="bestFitness"></div>
-                <hr />
-                <div class='col-6' id="generation"></div>
-                <div class='col-6' id="snakeNum"></div>
-
-                <hr />
+                <hr>
             </div>
             <div class="col-6">
                 <div class="row">
@@ -57,24 +54,23 @@
                 </div>
 
                 <div class="row">
-
                     <div class="btn btn-danger" id="StopBtn">Click to Stop</div>
                 </div>
+                <div class="row">
+                    <div class="btn btn-primary" id="DownloadBtn">Click to Download Best Snake</div>
+                </div>
+                
+                
                 <div class="dropdown-divider"></div>
-
-                <!-- <div class="row">
-                    <input class="form-check" type="checkbox"></input>
-                </div> -->
 
                 <div class="row">
                     <label for="numGen">Number of Snakes per Generation (10-1000):</label>
-                    <input class="form-control disabled" type="number" id="numGen" min="10" max="1000" value=200>
+                    <input class="form-control" type="number" id="numGen" min="10" max="1000" value=200>
                 </div>
+
                 <div class="dropdown-divider"></div>
 
-
                 <div class="row">
-
                     <label>
                         Change Game Speed
                     </label>
@@ -93,26 +89,10 @@
                 <div class="row">
 
                     <body>
-                        <!-- <div class="slidecontainer">
-                        <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                    </div> -->
-
-                        <!-- <div class="btn-group" data-toggle="buttons"> -->
                         <div class="btn btn-success active" id="drawBtn" onclick="shouldDrawBtn()">
                             Currently drawing snake
                         </div>
                 </div>
-                <div class="row">
-                    <!-- <input type="checkbox" checked data-toggle="toggle"> First -->
-
-                    <!-- <label class="checkbox-inline">
-                <input type="checkbox" data-toggle="toggle"> Second
-            </label>
-            <label class="checkbox-inline">
-                <input type="checkbox" data-toggle="toggle"> Third
-            </label> -->
-                </div>
-                <!-- </div> -->
                 <div class="row">
                     <canvas id="myChart" width="400" height="400"></canvas>
                 </div>
@@ -128,13 +108,7 @@
                             <th># Snakes Survive</th>
                             <th># Tensors</th>
                             <tbody id="pastScores">
-                                <!-- <th>Generation</th>
-                        <th>Best Fitness</th>
-                        <th>Average Fitness</th>
-                        <th>Best Score</th>
-                        <th>Average Score</th>
-                        <th># Snakes Survive</th>
-                        <th># Tensors</th> -->
+                                <!-- Where Generation Statistics are inserted -->
 
 
                             </tbody>
@@ -145,13 +119,7 @@
                             <th>Average Score</th>
                             <th># Snakes Survive</th>
                             <th># Tensors</th>
-                            <!-- <tfoot>Generation</tfoot>
-                    <tfoot>Best Fitness</tfoot>
-                    <tfoot>Average Fitness</tfoot>
-                    <tfoot>Best Score</tfoot>
-                    <tfoot>Average Score</tfoot>
-                    <tfoot># Snakes Survive</tfoot>
-                    <tfoot># Tensors</tfoot> -->
+
                         </table>
                     </div>
                 </div>
@@ -160,7 +128,6 @@
             </div>
 
 
-            <!-- </div> -->
         </div>
     </div>
 
@@ -183,7 +150,7 @@
 
 
 <script>
-    genSize = document.getElementById('numGen').value
+    let genSize = document.getElementById('numGen').value
 
     gi = new GameInstance('gameCanvas', genSize)
 
